sandbox/output
StringCalculator.java:9: error: cannot find symbol
            return addAll(numbers.split(delimiter, -1));
                          ^
  symbol:   variable numbers
  location: class StringCalculator
1 error
